Branch setup, add todo

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* adjust sass styling structure */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
