--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* define brand colors and add them */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
