--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -14,7 +14,14 @@
         padding: 5px 15px
         
     &__title
-        text-transform: uppercase
-        color: #000
+        width: 100%
+        input
+            width: 100%
+            text-transform: uppercase
+            color: #000
+            border: none
+            border-bottom: 1px solid black
+            background: transparent
+            padding: 10px 5px
     &__status
         color: #000
