--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -7,14 +7,16 @@
     
     &__item
         display: flex
+        flex-wrap: wrap
         width: calc(50% - 10px)
         justify-content: space-between
         background: #fafafa
         margin: 10px 0
         padding: 5px 15px
+        & > *, & > * textarea
+            width: 100%
         
     &__title
-        width: 100%
         input
             width: 100%
             text-transform: uppercase
@@ -24,4 +26,22 @@
             background: transparent
             padding: 10px 5px
     &__status
+        color: #000
+    &__details
+        display: flex
+        justify-content: space-around
+        & > *
+            margin: 0
+            input, select
+                border-radius: 25px
+                border: 1px solid black
+                padding: 2px 5px
+            label
+                color: #0000007a
+                font-size: 15px
+                margin-right: 10px
+    textarea
+        border: none
+        background: #fff
+        padding: 5px
         color: #000
