--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -2,20 +2,32 @@
     padding: 25px
     &__container
         display: flex
-        flex-wrap: wrap
-        justify-content: space-between
+        flex-direction: column
     
     &__item
         display: flex
-        flex-wrap: wrap
-        width: calc(50% - 10px)
-        justify-content: space-between
+        flex-wrap: nowrap
+        width: 100%
+        justify-content: center
         background: #fafafa
         margin: 10px 0
         padding: 5px 15px
+        min-width: 50vw
         & > *, & > * textarea
             width: 100%
-        
+        &--show
+            flex-wrap: wrap
+            .tasklist__description
+                display: block
+            .tasklist__details
+                flex-direction: row
+                p
+                    display: flex
+                    flex-direction: row
+                label
+                    display: block
+    &__description 
+        display: none
     &__title
         input
             width: 100%
@@ -27,9 +39,15 @@
             padding: 10px 5px
     &__status
         color: #000
+    &__button 
+        max-width: 150px
+
     &__details
         display: flex
+        flex-direction: column
         justify-content: space-around
+        label
+            display: none
         & > *
             margin: 0
             input, select
