--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -13,10 +13,10 @@
         margin: 10px 0
         padding: 5px 15px
         min-width: 50vw
-        & > *, & > * textarea
-            width: 100%
         &--show
             flex-wrap: wrap
+            & > *, & > * textarea
+                width: 100%
             .tasklist__description
                 display: block
             .tasklist__details
@@ -29,6 +29,7 @@
     &__description 
         display: none
     &__title
+        width: 100%
         input
             width: 100%
             text-transform: uppercase
@@ -40,7 +41,9 @@
     &__status
         color: #000
     &__button 
-        max-width: 150px
+        max-width: 50px
+        &--newTask
+            max-width: 100%
 
     &__details
         display: flex
