--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -8,12 +8,14 @@
         display: flex
         flex-wrap: nowrap
         width: 100%
+        width: 750px
         justify-content: center
         background: #fafafa
         margin: 10px 0
         padding: 5px 15px
-        min-width: 50vw
+        transition: .5s
         &--show
+            transition: .5s
             flex-wrap: wrap
             & > *, & > * textarea
                 width: 100%
@@ -26,6 +28,7 @@
                     flex-direction: row
                 label
                     display: block
+                    width: 100%
     &__description 
         display: none
     &__title
@@ -57,6 +60,7 @@
                 border-radius: 25px
                 border: 1px solid black
                 padding: 2px 5px
+                width: 100%
             label
                 color: #0000007a
                 font-size: 15px
