Add delete button

--- a/src/component/Task/style.css
+++ b/src/component/Task/style.css
@@ -45,6 +45,10 @@
   display: block;
 }
 
+.tasklist__item--show .tasklist__description textarea {
+  height: 100px;
+}
+
 .tasklist__item--show .tasklist__details {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
