--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -21,6 +21,8 @@
                 width: 100%
             .tasklist__description
                 display: block
+                textarea
+                    height: 100px
             .tasklist__details
                 flex-direction: row
                 p
