Adjust Nav styling

--- a/src/component/Navbar/style.sass
+++ b/src/component/Navbar/style.sass
@@ -1,7 +1,19 @@
-.dropzone
-    border: 1px solid black
-    padding: 15px
-    margin: 40px
-    &--title
-        font-size: 20px
-        font-weight: 400
+.navbar
+    &__wrapper
+        display: flex
+        justify-content: center
+    &__item
+        all: unset
+        background-color: #fafafa
+        width: 150px
+        height: 150px
+        display: flex
+        justify-content: center
+        align-items: center
+        margin: 10px
+    &__link
+        color: #000
+        padding: 10px 15px
+        &:hover
+            color: inherit
+            text-decoration: underline
