--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -1,11 +1,36 @@
-.dropzone {
-  border: 1px solid black;
-  padding: 15px;
-  margin: 40px;
+.navbar__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.dropzone--title {
-  font-size: 20px;
-  font-weight: 400;
+.navbar__item {
+  all: unset;
+  background-color: #fafafa;
+  width: 150px;
+  height: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 10px;
+}
+
+.navbar__link {
+  color: #000;
+  padding: 10px 15px;
+}
+
+.navbar__link:hover {
+  color: inherit;
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
