Minor UI css changes

--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -5,6 +5,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
 }
 
 .navbar__item {
