--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -8,12 +8,11 @@
         display: flex
         flex-wrap: nowrap
         width: 100%
-        width: 750px
         justify-content: center
         background: #fafafa
         margin: 10px 0
         padding: 5px 15px
-        transition: .5s
+        transition: .5s ease-in-out
         &--show
             transition: .5s
             flex-wrap: wrap
