--- a/src/component/Navbar/style.sass
+++ b/src/component/Navbar/style.sass
@@ -2,6 +2,7 @@
     &__wrapper
         display: flex
         justify-content: center
+        padding-inline-start: 0
     &__item
         all: unset
         background-color: #fafafa
