--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -1,3 +1,19 @@
 .DraftEditor-root
-    border: 1px solid black
+    border: 1px solid #00000042
+    border-radius: 15px
     padding: 15px
+    margin-top: 15px
+
+.editor
+    &__title
+        display: flex
+        label
+            font-size: 18px
+            font-weight: 700
+            padding: 0 10px
+        #title
+            border: unset
+            border-bottom: 1px solid #00000042
+            width: 100%
+.style-controls
+    display: flex
