--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -1,6 +1,6 @@
 .DraftEditor-root
     border: 1px solid #00000042
-    border-radius: 15px
+    border-radius: 5px
     padding: 15px
     margin-top: 15px
 
@@ -15,5 +15,7 @@
             border: unset
             border-bottom: 1px solid #00000042
             width: 100%
+            &:focus
+                outline: none
 .style-controls
     display: flex
