--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -19,3 +19,9 @@
                 outline: none
 .style-controls
     display: flex
+
+.notes
+    &__note
+        border: 1px solid #00000042
+        padding: 20px
+        margin: 40px 0
