--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -87,9 +87,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: -150%;
+  top: -110%;
   left: 0;
-  z-index: 999;
+  z-index: 9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -120,5 +120,38 @@
   padding: 10px;
   text-align: left;
   width: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.notes__modalcontainer {
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: #00000050;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.notes__modal {
+  position: absolute;
+  top: 10vh;
+  z-index: 11;
+  width: 100%;
+  max-width: 80vw;
+}
+
+.notes__modal .DraftEditor-root {
+  margin: 0;
+  background: #fff;
 }
 /*# sourceMappingURL=style.css.map */
