--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -56,9 +56,9 @@
         position: absolute
         width: 100%
         height: 100%
-        top: -150%
+        top: -110%
         left: 0
-        z-index: 999
+        z-index: 9
         display: flex
         flex-direction: column
         align-items: center
@@ -76,3 +76,23 @@
         padding: 10px
         text-align: left
         width: 100%
+        user-select: none
+    &__modalcontainer
+        top: 0
+        left: 0
+        position: absolute
+        background: #00000050
+        width: 100%
+        height: 100%
+        z-index: 10
+        display: flex
+        justify-content: center
+    &__modal
+        position: absolute
+        top: 10vh
+        z-index: 11
+        width: 100%
+        max-width: 80vw
+        .DraftEditor-root
+            margin: 0
+            background: #fff
