--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -129,7 +129,7 @@
 .notes__modalcontainer {
   top: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   background: #00000050;
   width: 100%;
   height: 100%;
@@ -143,7 +143,7 @@
 }
 
 .notes__modal {
-  position: absolute;
+  position: fixed;
   top: 10vh;
   z-index: 11;
   width: 100%;
@@ -153,5 +153,8 @@
 .notes__modal .DraftEditor-root {
   margin: 0;
   background: #fff;
+  max-height: 80vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=style.css.map */
