--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -80,7 +80,7 @@
     &__modalcontainer
         top: 0
         left: 0
-        position: absolute
+        position: fixed
         background: #00000050
         width: 100%
         height: 100%
@@ -88,7 +88,7 @@
         display: flex
         justify-content: center
     &__modal
-        position: absolute
+        position: fixed
         top: 10vh
         z-index: 11
         width: 100%
@@ -96,3 +96,6 @@
         .DraftEditor-root
             margin: 0
             background: #fff
+            max-height: 80vh
+            overflow-y: scroll
+            overflow-x: hidden
