Minor UI fixes, add -add new- button

--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -22,11 +22,13 @@
 
 .notes
     display: flex
+    flex-wrap: wrap
+    max-width: 900px
     &__document
         border: 5px solid #e8e8e8
         border-radius: 15px
         margin: 20px 10px
-        width: 200px
+        width: 22%
         height: 250px
         overflow: hidden
         display: flex
