--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -37,13 +37,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 900px;
 }
 
 .notes__document {
   border: 5px solid #e8e8e8;
   border-radius: 15px;
   margin: 20px 10px;
-  width: 200px;
+  width: 22%;
   height: 250px;
   overflow: hidden;
   display: -webkit-box;
