--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  max-width: 900px;
 }
 
 h1 {
