Add functionality to create note with modal and edit them

--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -151,11 +151,8 @@
   z-index: 11;
   width: 100%;
   max-width: 80vw;
-}
-
-.notes__modal .DraftEditor-root {
-  margin: 0;
   background: #fff;
+  border-radius: 25px;
   max-height: 80vh;
   overflow-y: scroll;
   overflow-x: hidden;
