--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -95,9 +95,8 @@
         z-index: 11
         width: 100%
         max-width: 80vw
-        .DraftEditor-root
-            margin: 0
-            background: #fff
-            max-height: 80vh
-            overflow-y: scroll
-            overflow-x: hidden
+        background: #fff
+        border-radius: 25px
+        max-height: 80vh
+        overflow-y: scroll
+        overflow-x: hidden
