--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -1,12 +1,8 @@
-.DraftEditor-root
-    border: 1px solid #00000042
-    border-radius: 5px
-    padding: 15px
-    margin-top: 15px
-
 .editor
     &__title
         display: flex
+        overflow: hidden;
+        padding-bottom: 15px
         label
             font-size: 18px
             font-weight: 700
@@ -19,6 +15,9 @@
                 outline: none
 .style-controls
     display: flex
+    background: #fff
+    position: relative
+    border-radius: 25px 25px 0 0
 
 .notes
     display: flex
@@ -97,6 +96,11 @@
         max-width: 80vw
         background: #fff
         border-radius: 25px
-        max-height: 80vh
-        overflow-y: scroll
-        overflow-x: hidden
+        .DraftEditor-root
+            border: 1px solid #00000042
+            border-radius: 25px
+            padding: 15px
+            overflow-y: scroll
+            overflow-x: hidden
+            min-height: 50vh
+            max-height: 70vh
