--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -36,6 +36,16 @@
         flex-wrap: wrap
         font-size: 4px
         position: relative
+        &--new 
+            font-size: 45px
+            font-weight: 900
+            overflow: unset
+            padding: 10px
+            .button
+                width: 100%
+                height: 100%
+                margin: 0
+                border: none
         &:hover 
             .notes__controls
                 top: 0
