Restyle scrollbar/change publish function

--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -109,8 +109,11 @@
         .DraftEditor-root
             border: 1px solid #00000042
             border-radius: 25px
-            padding: 15px
-            overflow-y: scroll
-            overflow-x: hidden
             min-height: 50vh
             max-height: 70vh
+            padding: 15px 0
+            .DraftEditor-editorContainer
+                    overflow-y: scroll
+                    overflow-x: hidden
+                    padding: 15px
+                    max-height: 66vh
