--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -170,10 +170,15 @@
 .notes__modal .DraftEditor-root {
   border: 1px solid #00000042;
   border-radius: 25px;
-  padding: 15px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   min-height: 50vh;
   max-height: 70vh;
+  padding: 15px 0;
+}
+
+.notes__modal .DraftEditor-root .DraftEditor-editorContainer {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 15px;
+  max-height: 66vh;
 }
 /*# sourceMappingURL=style.css.map */
