Fix button styling

--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -41,6 +41,9 @@
             font-weight: 900
             overflow: unset
             padding: 10px
+            display: flex
+            justify-content: center
+            align-items: center
             .button
                 width: 100%
                 height: 100%
