--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -66,6 +66,15 @@
   font-weight: 900;
   overflow: unset;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .notes__document--new .button {
