--- a/src/component/Editor/style.css
+++ b/src/component/Editor/style.css
@@ -188,6 +188,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 15px;
-  max-height: 66vh;
+  height: 66vh;
 }
 /*# sourceMappingURL=style.css.map */
