--- a/src/component/Editor/style.sass
+++ b/src/component/Editor/style.sass
@@ -119,4 +119,4 @@
                     overflow-y: scroll
                     overflow-x: hidden
                     padding: 15px
-                    max-height: 66vh
+                    height: 66vh
