--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,13 @@ h1 {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.input {
+  border: none;
+  border-bottom: 1px solid #000;
+  font-size: 16px;
+  width: fit-content;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
