--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -1,3 +1,16 @@
+@keyframes slideInFromLeft 
+  0% 
+    transform: translateX(-100%)
+  100%
+    transform: translateX(0)
+
+@keyframes fadeIn 
+  0% 
+    opacity: 0
+  100%
+    opacity: 1
+
+    
 .tasklist
     padding: 25px
     position: relative
@@ -13,9 +26,10 @@
             position: absolute
             background: #00000054
             z-index: 2
+            animation: .2s ease-out 0s 1 fadeIn
         &-form
             height: 100%
-            width: 33vw
+            width: 50vw
             padding: 20px
             z-index: 3
             background: #fff
@@ -24,6 +38,7 @@
             justify-content: center
             align-content: center
             flex-direction: column
+            animation: .5s ease-out 0s 1 slideInFromLeft
         &-close
             position: absolute
             top: 0
@@ -100,3 +115,5 @@
         background: #fff
         padding: 5px
         color: #000
+
+
