--- a/src/component/Task/style.css
+++ b/src/component/Task/style.css
@@ -43,53 +43,6 @@
   position: relative;
 }
 
-.tasklist__modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-}
-
-.tasklist__modal::before {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  background: #00000054;
-  z-index: 2;
-  -webkit-animation: .2s ease-out 0s 1 fadeIn;
-          animation: .2s ease-out 0s 1 fadeIn;
-}
-
-.tasklist__modal-form {
-  height: 100%;
-  width: 50vw;
-  padding: 20px;
-  z-index: 3;
-  background: #fff;
-  position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-animation: .5s ease-out 0s 1 slideInFromLeft;
-          animation: .5s ease-out 0s 1 slideInFromLeft;
-}
-
-.tasklist__modal-close {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
 .tasklist__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -221,10 +174,88 @@
   margin-right: 10px;
 }
 
-.tasklist textarea {
-  border: none;
+.tasklist__modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+}
+
+.tasklist__modal::before {
+  content: "";
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background: #00000054;
+  z-index: 2;
+  -webkit-animation: .2s ease-out 0s 1 fadeIn;
+          animation: .2s ease-out 0s 1 fadeIn;
+}
+
+.tasklist__modal-form {
+  height: 100%;
+  width: 50vw;
+  padding: 70px 20px;
+  z-index: 3;
   background: #fff;
-  padding: 5px;
-  color: #000;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-animation: .5s ease-out 0s 1 slideInFromLeft;
+          animation: .5s ease-out 0s 1 slideInFromLeft;
+}
+
+.tasklist__modal-form label {
+  text-align: left;
+  font-size: 12px;
+  color: #767676;
+}
+
+.tasklist__modal-form label svg {
+  font-size: 10px;
+  margin-right: 5px;
+}
+
+.tasklist__modal-title {
+  border: none;
+  border-bottom: 1px solid #000;
+  font-size: 18px;
+  margin: 10px 0;
+  padding: 5px 10px;
+}
+
+.tasklist__modal-description {
+  height: 100%;
+  padding: 10px;
+  border: none;
+  margin: 15px 0;
+}
+
+.tasklist__modal-description, .tasklist__modal-title {
+  margin-bottom: 40px;
+}
+
+.tasklist__modal-status, .tasklist__modal-date {
+  padding: 2px 10px;
+}
+
+.tasklist__modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.tasklist__modal .tasklist__modal-status, .tasklist__modal .tasklist__modal-date {
+  border: 1px solid #000;
+  border-radius: 25px;
+  margin: 15px 5px;
 }
 /*# sourceMappingURL=style.css.map */
