--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -14,35 +14,6 @@
 .tasklist
     padding: 25px
     position: relative
-    &__modal
-        position: fixed
-        z-index: 1
-        left: 0
-        top: 0
-        &::before 
-            content: ""
-            width: 100vw
-            height: 100vh
-            position: absolute
-            background: #00000054
-            z-index: 2
-            animation: .2s ease-out 0s 1 fadeIn
-        &-form
-            height: 100%
-            width: 50vw
-            padding: 20px
-            z-index: 3
-            background: #fff
-            position: fixed
-            display: flex
-            justify-content: center
-            align-content: center
-            flex-direction: column
-            animation: .5s ease-out 0s 1 slideInFromLeft
-        &-close
-            position: absolute
-            top: 0
-            right: 0
 
     &__container
         display: flex
@@ -110,10 +81,60 @@
                 color: #0000007a
                 font-size: 15px
                 margin-right: 10px
-    textarea
-        border: none
-        background: #fff
-        padding: 5px
-        color: #000
 
+    &__modal
+        position: fixed
+        z-index: 1
+        left: 0
+        top: 0
+        &::before 
+            content: ""
+            width: 100vw
+            height: 100vh
+            position: absolute
+            background: #00000054
+            z-index: 2
+            animation: .2s ease-out 0s 1 fadeIn
+        &-form
+            height: 100%
+            width: 50vw
+            padding: 70px 20px
+            z-index: 3
+            background: #fff
+            position: fixed
+            display: flex
+            justify-content: flex-start
+            flex-direction: column
+            animation: .5s ease-out 0s 1 slideInFromLeft
+            label
+                text-align: left
+                font-size: 12px
+                color: #767676
+                svg
+                    font-size: 10px
+                    margin-right: 5px
+        &-title
+            border: none
+            border-bottom: 1px solid #000
+            font-size: 18px
+            margin: 10px 0
+            padding: 5px 10px
+        &-description
+            height: 100%
+            padding: 10px
+            border: none
+            margin: 15px 0
+        &-description, &-title 
+            margin-bottom: 40px
+        &-status, &-date
+            padding: 2px 10px
+        &-close
+            position: absolute
+            top: 0
+            right: 0
+
+        .tasklist__modal-status, .tasklist__modal-date
+            border: 1px solid #000
+            border-radius: 25px
+            margin: 15px 5px
 
