--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -28,27 +28,10 @@
         margin: 10px 0
         padding: 5px 15px
         transition: .5s ease-in-out
-        &--show
-            transition: .5s
-            flex-wrap: wrap
-            & > *, & > * textarea
-                width: 100%
-            .tasklist__description
-                display: block
-                textarea
-                    height: 100px
-            .tasklist__details
-                flex-direction: row
-                p
-                    display: flex
-                    flex-direction: row
-                label
-                    display: block
-                    width: 100%
-    &__description 
-        display: none
     &__title
         width: 100%
+        display: flex
+        align-items: center
         input
             width: 100%
             text-transform: uppercase
@@ -113,28 +96,29 @@
                 svg
                     font-size: 10px
                     margin-right: 5px
-        &-title
-            border: none
-            border-bottom: 1px solid #000
-            font-size: 18px
-            margin: 10px 0
-            padding: 5px 10px
-        &-description
+        .tasklist__item--modal
+            flex-direction: column
+            background-color: #fff
             height: 100%
-            padding: 10px
-            border: none
-            margin: 15px 0
-        &-description, &-title 
-            margin-bottom: 40px
-        &-status, &-date
-            padding: 2px 10px
+
+            .tasklist
+                &__title
+                    flex-direction: column
+                    align-items: flex-start
+
+                &__description
+                    height: 100%
+                    border: none
+
+                &__details
+                    flex-direction: row
+                    order: 3
+
+                &__details, &__description, &__title
+                    margin-bottom: 30px
+
         &-close
             position: absolute
             top: 0
             right: 0
-
-        .tasklist__modal-status, .tasklist__modal-date
-            border: 1px solid #000
-            border-radius: 25px
-            margin: 15px 5px
 
