Add saved Json preview in settings

--- a/src/component/DropZone/style.sass
+++ b/src/component/DropZone/style.sass
@@ -5,3 +5,12 @@
     &--title
         font-size: 20px
         font-weight: 400
+.jsonPreview
+    &__container
+        text-align: left
+        margin: 10%
+    &__data
+        max-height: 500px
+        max-width: 900px
+        overflow-x: hidden
+        white-space: pre-wrap
