--- a/src/component/DropZone/style.css
+++ b/src/component/DropZone/style.css
@@ -8,4 +8,16 @@
   font-size: 20px;
   font-weight: 400;
 }
+
+.jsonPreview__container {
+  text-align: left;
+  margin: 10%;
+}
+
+.jsonPreview__data {
+  max-height: 500px;
+  max-width: 900px;
+  overflow-x: hidden;
+  white-space: pre-wrap;
+}
 /*# sourceMappingURL=style.css.map */
