--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,13 @@ h1 {
   clip-path: inset(50%); /*modern browsers, clip-path works inwards from each corner*/
   white-space: nowrap; /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 }
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.settings div {
+  margin: 5px 0;
+}
