--- a/src/component/ReminderTask/style.sass
+++ b/src/component/ReminderTask/style.sass
@@ -6,8 +6,12 @@
     background-color: #fafafa
     border-radius: 25px
     box-shadow: 1px 1px 10px -6px #000000
-    max-width: 30%
+    width: 30%
     padding: 35px 25px
+
+    &__time-left
+        font-size: 12px
+        opacity: 0.6
 
     &__wrapper 
         display: flex
