--- a/src/component/ReminderTask/style.sass
+++ b/src/component/ReminderTask/style.sass
@@ -8,6 +8,9 @@
     box-shadow: 1px 1px 10px -6px #000000
     width: 30%
     padding: 35px 25px
+    opacity: 0.5
+    &--active
+        opacity: 1
 
     &__time-left
         font-size: 12px
@@ -18,6 +21,7 @@
         justify-content: center
         flex-wrap: wrap
         gap: 20px
+        padding: 30px 0
 
     &__icon
         font-size: 40px
@@ -28,7 +32,10 @@
 
     &__details
         display: flex
+        justify-content: center
+        align-items: center
         flex-direction: column
+        gap: 10px
 
     &__date
         border-radius: 25px
@@ -36,3 +43,4 @@
 
     &__checkbox
         margin: 15px 20px
+        opacity: 1
