Adjust styling, add toggle function

--- a/src/component/ReminderTask/style.sass
+++ b/src/component/ReminderTask/style.sass
@@ -5,12 +5,12 @@
     flex-direction: column
     background-color: #fafafa
     border-radius: 25px
-    box-shadow: 1px 1px 10px -6px #000000
     width: 30%
     padding: 35px 25px
     opacity: 0.5
     &--active
         opacity: 1
+        box-shadow: 1px 1px 10px -6px #000000
 
     &__time-left
         font-size: 12px
@@ -29,6 +29,11 @@
     &__heading
         font-size: 16px
         text-transform: uppercase
+        margin-top: 20px
+        border: none
+        border-bottom: 1px solid #000
+        background: transparent
+        text-align: center
 
     &__details
         display: flex
