--- a/src/component/ReminderTask/style.css
+++ b/src/component/ReminderTask/style.css
@@ -14,8 +14,6 @@
           flex-direction: column;
   background-color: #fafafa;
   border-radius: 25px;
-  -webkit-box-shadow: 1px 1px 10px -6px #000000;
-          box-shadow: 1px 1px 10px -6px #000000;
   width: 30%;
   padding: 35px 25px;
   opacity: 0.5;
@@ -23,6 +21,8 @@
 
 .reminder--active {
   opacity: 1;
+  -webkit-box-shadow: 1px 1px 10px -6px #000000;
+          box-shadow: 1px 1px 10px -6px #000000;
 }
 
 .reminder__time-left {
@@ -50,6 +50,11 @@
 .reminder__heading {
   font-size: 16px;
   text-transform: uppercase;
+  margin-top: 20px;
+  border: none;
+  border-bottom: 1px solid #000;
+  background: transparent;
+  text-align: center;
 }
 
 .reminder__details {
