--- a/src/component/Task/style.sass
+++ b/src/component/Task/style.sass
@@ -15,6 +15,10 @@
     padding: 25px
     position: relative
 
+    &--done
+        .tasklist__item
+            opacity: 0.5
+
     &__container
         display: flex
         flex-direction: column
