--- a/src/component/ReminderTask/style.sass
+++ b/src/component/ReminderTask/style.sass
@@ -8,9 +8,13 @@
     width: 30%
     padding: 35px 25px
     opacity: 0.5
+    .reminder__time-left
+        opacity: 0
     &--active
         opacity: 1
         box-shadow: 1px 1px 10px -6px #000000
+        .reminder__time-left
+            opacity: 1
 
     &__time-left
         font-size: 12px
