--- a/src/component/ReminderNotification/style.css
+++ b/src/component/ReminderNotification/style.css
@@ -1,7 +1,7 @@
 .notification {
   background: #fafafa;
   position: fixed;
-  top: 0;
+  top: -500px;
   left: 0;
   width: 100vw;
   padding: 25px 0;
@@ -14,11 +14,12 @@
   -webkit-box-shadow: 1px 1px 10px -6px #000000;
           box-shadow: 1px 1px 10px -6px #000000;
   z-index: 10;
-  display: none;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
 }
 
 .notification.visible {
-  display: block;
+  top: 0;
 }
 
 .notification__close {
@@ -28,5 +29,9 @@
   font-size: 20px;
   background: inherit;
   border: unset;
+}
+
+.notification__close:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
