--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -8,6 +8,7 @@
         &--today
             .calender__inner-container
                 border-top: 5px solid #000
+                background: #eeeeee
         &--past
             opacity: .4
     &__top
