--- a/src/component/Calender/style.sass
+++ b/src/component/Calender/style.sass
@@ -1,9 +1,27 @@
 .calender
-    display: flex
-    overflow-x: scroll
-    max-width: 850px
-    padding: 30px 20px
-    gap: 15px
+    position: relative
+    &::before, &::after
+        content: ""
+        position: absolute
+        top: 0
+        width: 50px
+        height: 100%
+        z-index: 10
+        background: rgb(255,255,255)
+    &::before
+        left: 0
+        background: linear-gradient(90deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%)
+    &::after
+        right: 0
+        background: linear-gradient(270deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%)
+    &__wrapper
+        display: flex
+        overflow-x: scroll
+        max-width: 1050px
+        padding: 75px 30px
+        width: 90vw
+        gap: 15px
+        position: relative
     &__day
         &--today
             .calender__inner-container
